new super changes

--- a/about-midchains.html
+++ b/about-midchains.html
@@ -12,7 +12,7 @@
         <nav class="navigation">
             <div class="nav-left">
                 <div>
-                    <img  src="assests/img/Logo Midchains.png" alt="logo">
+                    <a href="index.html" target="_blank"><img  src="assests/img/Logo Midchains.png" alt="logo"></a>
                 </div>
                 <div>
                     <ul class="nav-main_list">
@@ -43,23 +43,24 @@
     <h1 class="principles">Principles</h1>
     <section class="section-2">
         <div class="container-1">
-            <img src="assests/img-3/Security (1).png" alt="">
+
+            <img src="assests/img-3/Security (1).svg" alt="">
             <h2 class="section-2-h2">Philosophy</h2>
             <p class="p-2">As one of the world’s first fully regulated virtual asset exchanges and custodians, we believe at MidChains that the global adoption of cryptocurrencies can only be based on a culture of compliance and protection of customer assets. These are the very foundations of our business model.</p>
         </div>
         <div class="container-2">
-            <img src="assests/img-3/Private Clients (1).png" alt="">
+            <img src="assests/img-3/Private Clients (1).svg" alt="">
             <h2 class="section-2-h2">Customer Centric</h2>
             <p class="p-2">Everything we do at MidChains revolves around meeting the sophisticated requirements of investors by offering premium trading and custody services globally from the UAE.</p>
         </div>
         <div class="container-3">
-            <img src="assests/img-3/Prime OTC Execution (1).png" alt="">
+            <img src="assests/img-3/Prime OTC Execution .svg" alt="">
             <h2 class="section-2-h2">Innovation</h2>
             <p class="p-2">We constantly challenge ourselves to deploy industry leading technology with robust security to provide a superior trading experience that meet the needs of the financial trading community in an evolving space.</p>
         </div>
     </section>
-    <div class="m">
-    <img  src="assests/img-3/M.png" alt="">
+    <div class="get-started">
+    <a href="#"><p class="get_started">Get Started</p></a>
     </div>
         <img class="rozovmic2" src="assests/img-3/verdemic2.png" alt="">
         <div class="team1">
@@ -67,89 +68,89 @@
         </div>
     <section class="section-3">
         <div class="worker1">
-            <img class="avatar1" src="assests/img-3/avatar1.png" alt="">
+            <img class="avatar1" src="assests/img-3/avatar1.svg" alt="">
             <div class="paragraf">
                 <h3>Basil Al Askari</h3>
-                <img src="assests/img-3/mdi_linkedin.png" alt="">
+                <img src="assests/img-3/mdi_linkedin.svg" alt="">
             </div>
             <p class="p-3">Co-founder & Chief Executive Officer</p>
         </div>
         <div class="worker">
-            <img class="avatar1" src="assests/img-3/avatar2.png" alt="">
+            <img class="avatar1" src="assests/img-3/avatar2.svg" alt="">
             <div class="paragraf">
                 <h3>Craig Lund</h3>
-                <img src="assests/img-3/mdi_linkedin.png" alt="">
+                <img src="assests/img-3/mdi_linkedin.svg" alt="">
             </div>
             <p class="p-3">Chief Operating Officer</p>
         </div>
         <div class="worker">
-            <img class="avatar1" src="assests/img-3/avatar3.png" alt="">
+            <img class="avatar1" src="assests/img-3/avatar3.svg" alt="">
             <div class="paragraf">
                 <h3>Elie Afram</h3>
-                <img src="assests/img-3/mdi_linkedin.png" alt="">
+                <img src="assests/img-3/mdi_linkedin.svg" alt="">
             </div>
             <p class="p-3">Chief Technology Officer</p>
         </div>
         <div class="worker">
-            <img class="avatar1" src="assests/img-3/avatar4.png" alt="">
+            <img class="avatar1" src="assests/img-3/avatar4.svg" alt="">
             <div class="paragraf">
                 <h3>Poul Gotterup</h3>
-                <img src="assests/img-3/mdi_linkedin.png" alt="">
+                <img src="assests/img-3/mdi_linkedin.svg" alt="">
             </div>
             <p class="p-3">Chief Technology Officer</p>
         </div>
         <div class="worker">
-            <img class="avatar1" src="assests/img-3/avatar5.png" alt="">
+            <img class="avatar1" src="assests/img-3/avatar5.svg" alt="">
             <div class="paragraf">
                 <h3>Alina Parfilava</h3>
-                <img src="assests/img-3/mdi_linkedin.png" alt="">
+                <img src="assests/img-3/mdi_linkedin.svg" alt="">
             </div>
             <p class="p-3">Chief Compliance Officer</p>
         </div>
         <div class="worker">
-            <img class="avatar1" src="assests/img-3/avatar6.png" alt="">
+            <img class="avatar1" src="assests/img-3/avatar6.svg" alt="">
             <div class="paragraf">
                 <h3>Seyd Manzour</h3>
-                <img src="assests/img-3/mdi_linkedin.png" alt="">
+                <img src="assests/img-3/mdi_linkedin.svg" alt="">
             </div>
             <p class="p-3">Head of Finance</p>
         </div>
         <div class="worker">
-            <img class="avatar1" src="assests/img-3/avatar7.png" alt="">
+            <img class="avatar1" src="assests/img-3/avatar7.svg" alt="">
             <div class="paragraf">
                 <h3>Asif Razzaq</h3>
-                <img src="assests/img-3/mdi_linkedin.png" alt="">
+                <img src="assests/img-3/mdi_linkedin.svg" alt="">
             </div>
             <p class="p-3">Head of Trading</p>
         </div>
         <div class="worker">
-            <img class="avatar1" src="assests/img-3/avatar8.png" alt="">
+            <img class="avatar1" src="assests/img-3/avatar8.svg" alt="">
             <div class="paragraf">
                 <h3>Theyab Al Hashemi</h3>
-                <img src="assests/img-3/mdi_linkedin.png" alt="">
+                <img src="assests/img-3/mdi_linkedin.svg" alt="">
             </div>
             <p class="p-3">Head of HR</p>
         </div>
     </section>
-            <img class="verdemic22" src="assests/img-3/verdemic2.png" alt="">
+            <img class="verdemic-2" src="assests/img-3/verdemic2.png" alt="">
     </section>
     <section class="section-4">
         <div class="partners-main">
         <p class="partners">Investors & Partners</p>
         </div>
-        <img class="companies" src="assests/img-3/adq.png" alt="">
-        <img class="companies" src="assests/img-3/pasare.png" alt="">
-        <img class="companies" src="assests/img-3/miax.png" alt="">
-        <img class="companies" src="assests/img-3/mubalda.png" alt="">
-        <img class="companies" src="assests/img-3/gsr.png" alt="">
-        <img class="companies" src="assests/img-3/emurgo.png" alt="">
-        <img class="companies" src="assests/img-3/lukka.png" alt="">
+        <img class="companies" src="assests/img-3/adq.svg" alt="">
+        <img class="companies" src="assests/img-3/pasare.svg" alt="">
+        <img class="companies" src="assests/img-3/miax.svg" alt="">
+        <img class="companies" src="assests/img-3/mubalda.svg" alt="">
+        <img class="companies" src="assests/img-3/gsr.svg" alt="">
+        <img class="companies" src="assests/img-3/emurgo.svg" alt="">
+        <img class="companies" src="assests/img-3/lukka.svg" alt="">
     </section>
     <section class="section-5">
         <div class="start">
             <p class="end">Contact us to Explore Partnership
                 Opportunities with <span class="client">MidChains</span></p>
-            <p class="interestedd">I’m interested</p>
+            <a href="#"><p class="interestedd">Contact Us</p></a>
         </div>
     </section>
     <section class="footer-menu">
