--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Individuals</title>
+    <title>MidChains</title>
     <link rel="stylesheet" href="dist/nav-footer-style.css">
     <link rel="stylesheet" href="dist/style.css">
     <link rel="stylesheet" href="about-midchains.html">
@@ -14,7 +14,7 @@
         <nav class="navigation">
             <div class="nav-left">
                 <div>
-                    <img  src="assests/img/Logo Midchains.png" alt="logo">
+                    <a href="index.html" target="_blank"><img  src="assests/img/Logo Midchains.png" alt="logo"></a>
                 </div>
                 <div>
                     <ul class="nav-main_list">
@@ -104,7 +104,7 @@
             <h3 class="title-footer-menu">Individuals</h3>
             <ul>
                 <li>MidChains Exchange</li>
-                <li><a href="index2.html" target="_blank" class="privatee">Private Clients</a></li>
+                <li><a href="about-midchains.html" target="_blank" class="privatee">Private Clients</a></li>
                 <li>OTC Desk</li>
                 <li>Midchains Card</li>
             </ul>
