--- a/private-clients.html
+++ b/private-clients.html
@@ -14,7 +14,7 @@
         <nav class="navigation">
             <div class="nav-left">
                 <div>
-                    <img  src="assests/img/Logo Midchains.png" alt="logo">
+                    <a href="index.html" target="_blank"><img  src="assests/img/Logo Midchains.png" alt="logo"></a>
                 </div>
                 <div>
                     <ul class="nav-main_list">
@@ -34,18 +34,18 @@
     </header>
     <section class="section-1">
         <div class="container-1">
-            <img src="assests/img-2/crystal.png" alt="crystal-logo">
+            <img src="assests/img-2/crystal.svg" alt="crystal-logo">
             <h1 class="private">Private Clients</h1>
             <p class="access">Access MidChains’ white glove service to help you navigate the crypto markets</p>
             <div class="rose">
                 <ul class="rose-1">
-                    <li class="nb-1">Family offices</li>
-                    <li class="nb-2">HNWIs</li>
-                    <li class="nb-3">Trusts & Foundations</li>
-                    <li class="nb-4">Investment Vehicles</li>
+                    <li class="nb">Family offices</li>
+                    <li class="nb">HNWIs</li>
+                    <li class="nb">Trusts & Foundations</li>
+                    <li class="nb">Investment Vehicles</li>
                 </ul>
             </div>
-            <p class="interested">I’m interested</p>
+            <a href="#"><p class="interested">I’m interested</p></a>
         </div>
         <div class="container-2">
             <img class="port" src="assests/img-2/portfolio.png" alt="">         
@@ -54,32 +54,32 @@
     <h2>MidChains <span class="private">Private</span> Client Features</h2>
     <section class="section-2">
         <div class="icon">
-            <img src="assests/img-2/manager.png" alt="">
+            <img src="assests/img-2/manager.svg" alt="">
             <h3>Dedicated Account Manager</h3>
             <p class="p-section-2">Direct line for onboarding and overall account support</p>
         </div>
         <div class="icon">
-            <img src="assests/img-2/OTC.png" alt="">
+            <img src="assests/img-2/OTC.svg" alt="">
             <h3>OTC Products</h3>
             <p class="p-section-2">Access block trading, leverage, options and structured deposit notes</p>
         </div>
         <div class="icon">
-            <img src="assests/img-2/target.png" alt="">
+            <img src="assests/img-2/target.svg" alt="">
             <h3>Tailored Execution</h3>
             <p class="p-section-2">Personalised strategies to help you reach your goals</p>
         </div>
         <div class="icon">
-            <img src="assests/img-2/Prime OTC Execution.png" alt="">
+            <img src="assests/img-2/Prime OTC Execution (1).svg" alt="">
             <h3>Algorithmic Execution</h3>
             <p class="p-section-2">Access TWAP and VWAP to reduce operational risks</p>
         </div>
         <div class="icon">
-            <img src="assests/img-2/desk.png" alt="">
+            <img src="assests/img-2/desk.svg" alt="">
             <h3>Coverage Desk</h3>
             <p class="p-section-2">Receive MidChains’ institutional market insights</p>
         </div>
         <div class="icon">
-            <img src="assests/img-2/time.png" alt="">
+            <img src="assests/img-2/time.svg" alt="">
             <h3>Settlement Flexibility</h3>
             <p class="p-section-2">Settle trades within 24h using your bank and/or an external wallet of your choice.
             </p>
@@ -88,7 +88,7 @@
     <h2>Secured. <span class="compliant">Compliant. </span>Backed.</h2>
     <section class="section-3">
         <div class="tablle">
-            <img src="assests/img-2/law.png" alt="">
+            <img src="assests/img-2/law.svg" alt="">
             <h4>Safety of Assets</h4>
             <ul>
                 <li class="green">Customers’ assets are safeguarded and subject to ongoing regulatory checks</li>
@@ -97,7 +97,7 @@
             </ul>
         </div>
         <div class="tablle">
-            <img src="assests/img-2/Security.png" alt="">
+            <img src="assests/img-2/Security.svg" alt="">
             <h4>Enhanced Security</h4>
             <ul>
                 <li class="green">State-of-the-art encryption to better protect users and their accounts</li>
@@ -107,7 +107,7 @@
 
         </div>
         <div class="tablle">
-            <img src="assests/img-2/Institutional.png" alt="">
+            <img src="assests/img-2/Institutional.svg" alt="">
             <h4>Institutional Backing</h4>
             <li class="green">Backed by the sovereign wealth funds including Mubadala and DisruptAD</li>
             <li class="green">Backed by reputed international investors including MIAX Exchange Group, Lukka, GSR, and Emurgo</li>
@@ -118,7 +118,7 @@
     <section class="section-4">
         <div class="start">
             <p class="end">Start your <span class="client">Private Client</span> Relationship now</p>
-            <p class="interestedd">I’m interested</p>
+            <a href="#"><p class="interestedd">I’m interested</p></a>
         </div>
     </section>
     <section class="footer-menu">
