--- a/about-midchains.html
+++ b/about-midchains.html
@@ -19,7 +19,7 @@
                         <li class="list"><a class="nav-link" href="#">Individuals</a></li>
                         <li class="list"><a class="nav-link" href="#">Businesses</a></li>
                         <li class="list"><a class="nav-link" href="about-midchains.html" target="_blank" >Company</a></li>
-                        <li class="list"><a class="nav-link" href="#">Resources</a></li>
+                        <li class="list"><a class="nav-link" href="midchains-exchange.html" target="_blank">Resources</a></li>
                     </ul>
                 </div>
                 <div class="nav-right">
