--- a/private-clients.html
+++ b/private-clients.html
@@ -21,7 +21,7 @@
                         <li class="list"><a class="nav-link" href="#">Individuals</a></li>
                         <li class="list"><a class="nav-link"  href="#">Businesses</a></li>
                         <li class="list"><a class="nav-link" href="about-midchains.html" target="_blank">Company</a></li>
-                        <li class="list"><a class="nav-link" href="#">Resources</a></li>
+                        <li class="list"><a class="nav-link" href="midchains-exchange.html" target="_blank">Resources</a></li>
                     </ul>
                 </div>
                 <div class="nav-right">
@@ -91,27 +91,27 @@
             <img src="assests/img-2/law.svg" alt="">
             <h4>Safety of Assets</h4>
             <ul>
-                <li class="green">Customers’ assets are safeguarded and subject to ongoing regulatory checks</li>
-            <li class="green">Vetted assets are stored and managed by MidChains’ regulated custody service</li>
-            <li class="green">Industry leading infrastructure to securely trade and manage your assets</li>
+                <li class="with-green">Customers’ assets are safeguarded and subject to ongoing regulatory checks</li>
+            <li class="with-green">Vetted assets are stored and managed by MidChains’ regulated custody service</li>
+            <li class="with-green">Industry leading infrastructure to securely trade and manage your assets</li>
             </ul>
         </div>
         <div class="tablle">
             <img src="assests/img-2/Security.svg" alt="">
             <h4>Enhanced Security</h4>
             <ul>
-                <li class="green">State-of-the-art encryption to better protect users and their accounts</li>
-                <li class="green">Leading security controls designed to mitigate the risk of insider threats</li>
-                <li class="green">Third party security assessment and penetration testing</li>
+                <li class="with-green">State-of-the-art encryption to better protect users and their accounts</li>
+                <li class="with-green">Leading security controls designed to mitigate the risk of insider threats</li>
+                <li class="with-green">Third party security assessment and penetration testing</li>
             </ul>
 
         </div>
         <div class="tablle">
             <img src="assests/img-2/Institutional.svg" alt="">
             <h4>Institutional Backing</h4>
-            <li class="green">Backed by the sovereign wealth funds including Mubadala and DisruptAD</li>
-            <li class="green">Backed by reputed international investors including MIAX Exchange Group, Lukka, GSR, and Emurgo</li>
-            <li class="green">Emirati founded, regulated global exchange, and operated in Abu Dhabi, UAE.</li>
+            <li class="with-green">Backed by the sovereign wealth funds including Mubadala and DisruptAD</li>
+            <li class="with-green">Backed by reputed international investors including MIAX Exchange Group, Lukka, GSR, and Emurgo</li>
+            <li class="with-green">Emirati founded, regulated global exchange, and operated in Abu Dhabi, UAE.</li>
         </div>
     </section>
     <h5>MidChains Limited is regulated and authorized by the Financial Services Regulatory Authority of Abu Dhabi Global Market with registered number 3233”</h5>
