--- a/midchains-exchange.html
+++ b/midchains-exchange.html
@@ -149,7 +149,7 @@
             <ul>
                 <li>Institutional</li>
                 <li>Licensed Custody</li>
-                <li>OTC Desk</li>
+                <li><a href="mid-OTC-Desk.html" target="_blank" class="privatee" >OTC Desk</a></li>
                 <li>MidChains Pay</li>
                 <li>Partnership</li>
             </ul>
