--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <li class="list"><a class="nav-link" href="#">Individuals</a></li>
                         <li class="list"><a class="nav-link" href="#">Businesses</a></li>
                         <li class="list"><a class="nav-link" href="about-midchains.html" target="_blank" >Company</a></li>
-                        <li class="list"><a class="nav-link" href="midchains-exchange.html" target="_blank">Resources</a></li>
+                        <li class="list"><a class="nav-link" href="product-listed.html" target="_blank">Resources</a></li>
                     </ul>
                 </div>
                 <div class="nav-right">
@@ -103,7 +103,7 @@
         <div class="individuals">
             <h3 class="title-footer-menu">Individuals</h3>
             <ul>
-                <li>MidChains Exchange</li>
+                <li><a href="midchains-exchange.html" target="_blank" class="privatee">Midchains Exchange</a></li>
                 <li><a href="private-clients.html" target="_blank" class="privatee">Private Clients</a></li>
                 <li>OTC Desk</li>
                 <li>Midchains Card</li>
