--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <li>About</li>
                 <li>Regulations</li>
                 <li>Security</li>
-                <li>Careers</li>
+                <li> <a href="join-Midschain.html" target="_blank" class="privatee">Careers</a></li>
             </ul>
         </div>
         <div class="resources">
