--- a/midchains-exchange.html
+++ b/midchains-exchange.html
@@ -151,7 +151,7 @@
                 <li>Licensed Custody</li>
                 <li><a href="mid-OTC-Desk.html" target="_blank" class="privatee" >OTC Desk</a></li>
                 <li>MidChains Pay</li>
-                <li>Partnership</li>
+                <li> <a href="join-Midschain.html" target="_blank" class="privatee">Careers</a></li>
             </ul>
         </div>
         <div class="company">
