--- a/mid-OTC-Desk.html
+++ b/mid-OTC-Desk.html
@@ -139,7 +139,7 @@
         <div class="resources">
             <h3 class="title-footer-menu">Resources</h3>
             <ul>
-                <li>Support</li>
+                <li><a href="support.html" target="_blank" class="privatee">Support</a></li>
                 <li>FAQs</li>
                 <li>Blog</li>
                 <li>Product list</li>
