--- a/midchains-exchange.html
+++ b/midchains-exchange.html
@@ -151,7 +151,7 @@
                 <li>Licensed Custody</li>
                 <li><a href="mid-OTC-Desk.html" target="_blank" class="privatee" >OTC Desk</a></li>
                 <li>MidChains Pay</li>
-                <li> <a href="join-Midschain.html" target="_blank" class="privatee">Careers</a></li>
+                <li>Partnership</li>
             </ul>
         </div>
         <div class="company">
@@ -160,13 +160,13 @@
                 <li>About</li>
                 <li>Regulations</li>
                 <li>Security</li>
-                <li>Careers</li>
+                <li> <a href="join-Midschain.html" target="_blank" class="privatee">Careers</a></li>
             </ul>
         </div>
         <div class="resources">
             <h3 class="title-footer-menu">Resources</h3>
             <ul>
-                <li>Support</li>
+                <li><a href="support.html" target="_blank" class="privatee">Support</a></li>
                 <li>FAQs</li>
                 <li>Blog</li>
                 <li>Product list</li>
