--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="company">
             <h3 class="title-footer-menu">Company</h3>
             <ul>
-                <li>About</li>
+                <li> <a href="institutional.html" target="_blank" class="privatee">Institutional</a></li>
                 <li>Regulations</li>
                 <li>Security</li>
                 <li> <a href="join-Midschain.html" target="_blank" class="privatee">Careers</a></li>
@@ -144,7 +144,7 @@
                 <li>MidChains Limited (ADGM)</li>
                 <li>MCP MidChains Pay (DMCC)</li>
                 <li>MidChains Trading (DMCC) </li>
-                <li>Cookie Policy</li>
+                <li><a href="cookie-policy.html" target="_blank" class="privatee">Cookie Policy</a></li>
             </ul>
         </div>
     </section>
