--- a/support.html
+++ b/support.html
@@ -68,7 +68,7 @@
         <div class="businesses">
             <h3 class="title-footer-menu">Businesses</h3>
             <ul>
-                <li>Institutional</li>
+                <li> <a href="institutional.html" target="_blank" class="privatee">Institutional</a></li>
                 <li>Licensed Custody</li>
                 <li><a href="mid-OTC-Desk.html" target="_blank" class="privatee">OTC Desk</a></li>
                 <li>MidChains Pay</li>
@@ -100,7 +100,7 @@
                 <li>MidChains Limited (ADGM)</li>
                 <li>MCP MidChains Pay (DMCC)</li>
                 <li>MidChains Trading (DMCC) </li>
-                <li>Cookie Policy</li>
+                <li><a href="cookie-policy.html" target="_blank" class="privatee">Cookie Policy</a></li>
             </ul>
         </div>
     </section>
