--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join Midchains</title>
+    <title>Cookie Policy</title>
     <link rel="stylesheet" href="dist/nav-footer-style.css">
-    <link rel="stylesheet" href="dist/style-join-mid.css">
+    <link rel="stylesheet" href="dist/style-cookie-policy.css">
 </head>
 <body>
     <header>
@@ -31,78 +31,30 @@
         </nav>
     </header>
     <section class="section-1">
-        <div class="container-title">
-            <h1 class="title-h1">Join <span class="span-h1">MidChains</span></h1>
-            <p class="paragraf-1">Ready to work with a top talented team to bring secure crypto to the masses? We are excited to hear about how your skillset aligns with the role, please submit your resume.</p>
-        </div>
-        <div class="details-container">
-            <input class="your" type="text" placeholder="Type your name" required>
-            <input class="your" type="email" placeholder="Your email" required>
-            <input class="your" type="text" placeholder="Phone number" required>
-            <input class="your" type="text" placeholder="Choose your location">
-            <input class="your file" type="text" placeholder="Choose your file">
-            <input class="your letter" type="text" placeholder="Type your cover letter">
-        </div>
-        <div class="details-s">
-            <p class="submit-d"><a href="#">Submit Details</a></p>
-        </div>
+        <p class="legal-title">Legal</p>
+        <h1 class="title-main">Public Notice</h1>
     </section>
     <section class="section-2">
-        <h2 class="title-h2">Benefits</h2>
-        <div class="container-benefits">
-            <div class="minicontainer">
-                <img src="assests/img-join-mid/compensation.svg" alt="">
-                <h4 class="title-benefits">Competitive Compensation</h4>
-            </div>
-            <div class="minicontainer">
-                <img src="assests/img-join-mid/option.svg" alt="">
-                <h4 class="title-benefits">Equity Options</h4>
-            </div>
-            <div class="minicontainer">
-                <img src="assests/img-join-mid/health.svg" alt="">
-                <h4 class="title-benefits">Comprehensive Health Plans</h4>
-            </div>
-            <div class="minicontainer">
-                <img src="assests/img-join-mid/presentation.svg" alt="">
-                <h4 class="title-benefits">Training & Development</h4>
-            </div>
-            <div class="minicontainer">
-                <img src="assests/img-join-mid/events.svg" alt="">
-                <h4 class="title-benefits">Community Events</h4>
-            </div>
-            <div class="minicontainer">
-                <img src="assests/img-join-mid/childs.svg" alt="">
-                <h4 class="title-benefits">Generous Parental Leave</h4>
-            </div>
-        </div>
+       <img class="description-main" src="assests/img-Cookie-policy/header.png" alt="">
     </section>
     <section class="section-3">
-        <h2 class="title-h2">Principles</h2>
-    <div class="main-container-3">
-        <div class="section-3-containers">
-            <img class="img-container" src="assests/img-join-mid/diversity.svg" alt="">
-            <h3 class="title-principlies">Diversity</h3>
-            <p class="description-benefits">By joining MidChains you will be part of a multicultural organization that values diversity and inclusion.</p>
-        </div>
-        <div class="section-3-containers">
-            <img class="img-container" src="assests/img-join-mid/person.svg" alt="">
-            <h3 class="title-principlies">Flexibility and Autonomy</h3>
-            <p class="description-benefits">MidChains is a highly results-focused organization and values autonomy to explore your full potential and keep you at your most proactive.</p>
-        </div>
-        <div class="section-3-containers">
-            <img class="img-container" src="assests/img-join-mid/Private Clients (2).svg" alt="">
-            <h3 class="title-principlies">Individual Empowerment</h3>
-            <p class="description-benefits">At MidChains we strive to cultivate an environment that welcomes everyone to bring their full selves to work and empower each other</p>
-        </div>
-    </div>
+        <ul class="facts">
+            <a class="solid" href="#"><li class="abouts-first">Legals</li></a>
+            <a class="solid" href="#"><li class="abouts">Cookie Policy</li></a>
+            <a class="solid" href="#"><li class="abouts">Privacy Policy</li></a>
+            <a class="solid" href="#"><li class="abouts">Risk Disclosure</li></a>
+            <a class="solid" href="#"><li class="abouts">Client Agreementv</li></a>
+            <a class="solid" href="#"><li class="abouts">MTF Rules</li></a>
+            <a class="solid" href="#"><li class="abouts">Consultation Paper</li></a>
+            <a class="solid" href="#"><li class="abouts">Public Notice</li></a>
+        </ul>
     </section>
     <section class="section-4">
-        <div class="container-trusted">
-            <p class="trusted-acces">Your  <span class="contact-us-rose">Trusted Access</span> to Digital Assets</p>
-            <p class="create-mid">Create your MidChains account</p>
-            <p class="get-started"><a href="#">Get Started</a></p>
-        </div>
-    </section>
+        
+        <p class="newsletter"><b>Subscribe to our newsletter</b></p>
+        <input class="search" type="text" placeholder="Enter your email here">
+        <p class="touch"><a class="touch-1" href="#">Subscribe</a></p>
+</section>
     <section class="footer-menu">
         <div class="individuals">
             <h3 class="title-footer-menu">Individuals</h3>
