--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <ul>
                 <li> <a href="institutional.html" target="_blank" class="privatee">Institutional</a></li>
                 <li>Regulations</li>
-                <li>Security</li>
+                <li> <a href="legal-security.html" target="_blank" class="privatee">Security</a></li>
                 <li> <a href="join-Midschain.html" target="_blank" class="privatee">Careers</a></li>
             </ul>
         </div>
