--- a/mid-OTC-Desk.html
+++ b/mid-OTC-Desk.html
@@ -132,7 +132,7 @@
             <ul>
                 <li>About</li>
                 <li>Regulations</li>
-                <li>Security</li>
+                <li> <a href="legal-security.html" target="_blank" class="privatee">Security</a></li>
                 <li> <a href="join-Midschain.html" target="_blank" class="privatee">Careers</a></li>
             </ul>
         </div>
